--- a/template/loginlater.html
+++ b/template/loginlater.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://bootstrap.evget.com/assets/ico/favicon.ico">
 
-    <title>新闻和课程</title>
+    <title>工大圈子</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -51,17 +51,16 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">新闻和课程</a></li>
+            <li class="active"><a href="{% url 'home' username %}">新闻和课程</a></li>
             <li><a href="{% url 'friendt' username %}">好友</a></li>
             <li><a href="{% url 'self_page' username %}">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
-          <img src="/img/{{ username }}_icon.jpg" width="25" height="25" alt="你还没有头像"/>
             <div class="form-group">
-			  <a href="{% url 'userinfo' username=username %}">{{ username }}</a>
+            <img src="/img/{{ username }}_icon.jpg" onerror="javascript:this.src='/img/default_icon.jpg';" width="25" height="25" alt="你还没有头像"/>
+			  <a href="{% url 'userinfo' username=username %}">{{ username }}账号</a>
               <!--input type="text" placeholder="账号" class="form-control"-->
             </div>
-            
             <!--div class="form-group">
               <input type="password" placeholder="密码" class="form-control">
             </div>
@@ -81,43 +80,44 @@
             <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
           </p>
 		  
+
 		  
           <div class="row">
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b0.title}}</h2>
               <p>{{b0.recommend_index}} </p>
-              <p><a class="btn btn-default" href="/news_page/?url={{b0.source_url}}" role="button">View details »</a></p>
-	      <p><a class="btn btn-default" href="/self_pagehehe/?new={{b0.title}}&username={{username}}" role="button">转发</a></p>
+              <p><a class="btn btn-default" href="{% url 'news_paget' username=username url=b0.source_url %}" role="button">View details »</a></p>
+	      <p><a class="btn btn-default" href="{% url 'self_pagehehe' username=username url=b0.source_url %}" role="button">转发</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b1.title}}</h2>
               <p>{{b1.recommend_index}} </p>
-              <p><a class="btn btn-default" href="/news_page/?url={{b1.source_url}}" role="button">View details »</a></p>
-	      <p><a class="btn btn-default" href="/self_pagehehe/?new={{b1.title}}&username={{username}}" role="button">转发</a></p>
+              <p><a class="btn btn-default" href="{% url 'news_paget' username=username url=b1.source_url %}">View details »</a></p>
+	      <p><a class="btn btn-default" href="{% url 'self_pagehehe' username=username url=b1.source_url %}" role="button">转发</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b2.title}}</h2>
               <p>{{b2.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="/news_page/?url={{b2.source_url}}" role="button">View details »</a></p>
-	      <p><a class="btn btn-default" href="/self_pagehehe/?new={{b2.title}}&username={{username}}" role="button">转发</a></p>
+              <p><a class="btn btn-default" href="{% url 'news_paget' username=username url=b2.source_url %}">View details »</a></p>
+	      <p><a class="btn btn-default" href="{% url 'self_pagehehe' username=username url=b2.source_url %}" role="button">转发</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b3.title}}</h2>
               <p>{{b3.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="/news_page/?url={{b3.source_url}}" role="button">View details »</a></p>
-              <p><a class="btn btn-default" href="/self_pagehehe/?new={{b3.title}}&username={{username}}" role="button">转发</a></p>
+              <p><a class="btn btn-default" href="{% url 'news_paget' username=username url=b3.source_url %}" role="button">View details »</a></p>
+              <p><a class="btn btn-default" href="{% url 'self_pagehehe' username=username url=b3.source_url %}" role="button">转发</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b4.title}}</h2>
               <p>{{b4.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="/news_page/?url={{b4.source_url}}" role="button">View details »</a></p>
-	       <p><a class="btn btn-default" href="/self_pagehehe/?new={{b4.title}}&username={{username}}" role="button">转发</a></p>
+              <p><a class="btn btn-default" href="{% url 'news_paget' username=username url=b4.source_url %}" role="button">View details »</a></p>
+	       <p><a class="btn btn-default" href="{% url 'self_pagehehe' username=username url=b4.source_url %}" role="button">转发</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b5.title}}</h2>
               <p>{{b5.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="/news_page/?url={{b5.source_url}}" role="button">View details »</a></p>
-	      <p><a class="btn btn-default" href="/self_pagehehe/?new={{b5.title}}&username={{username}}" role="button">转发</a></p>
+              <p><a class="btn btn-default" href="{% url 'news_paget' username=username url=b5.source_url %}" role="button">View details »</a></p>
+	      <p><a class="btn btn-default" href="{% url 'self_pagehehe' username=username url=b5.source_url %}" role="button">转发</a></p>
             </div><!--/span-->
           </div><!--/row-->
         </div><!--/span-->
@@ -129,22 +129,11 @@
         </div><!--/span-->
       </div><!--/row-->
 	  
-	  <div>
-		  <ul class="pagination" align="center">
-			<li><a href="./登陆后主界面_files/登陆后主界面.html">«</a></li>
-			<li><a href="./登陆后主界面_files/登陆后主界面.html">1</a></li>
-			<li><a href="./登陆后主界面_files/登陆后主界面.html">2</a></li>
-			<li><a href="./登陆后主界面_files/登陆后主界面.html">3</a></li>
-			<li><a href="./登陆后主界面_files/登陆后主界面.html">4</a></li>
-			<li><a href="./登陆后主界面_files/登陆后主界面.html">5</a></li>
-			<li><a href="./登陆后主界面_files/登陆后主界面.html">»</a></li>
-		  </ul>
-	  </div>
 
       <hr>
 
       <footer>
-        <p>© Company 2014</p>
+        <p> super_god</p>
       </footer>
 
     </div><!--/.container-->
