--- a/template/self_page.html
+++ b/template/self_page.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://bootstrap.evget.com/assets/ico/favicon.ico">
 
-    <title>个人主页</title>
+    <title>工大圈子</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 	<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 	<script src="./登陆后主界面_files/jquery.min.js"></script>
 	<script src="./登陆后主界面_files/bootstrap.min.js"></script>
-	    <style>
+		<style>
 	img{
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
@@ -47,26 +47,25 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://www.baidu.com/">工大圈子</a>
+          <a class="navbar-brand" href="#">工大圈子</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="{% url 'home' %}">新闻和课程</a></li>
+            <li ><a href="{% url 'home' username%}">新闻和课程</a></li>
             <li><a href="{% url 'friendt' username %}">好友</a></li>
             <li class="active"><a href="{% url 'self_page' username %}">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
-          <img src="/img/{{ username }}_icon.jpg" width="25" height="25" />
             <div class="form-group">
-			  <a href="{% url 'userinfo' username=username %}">{{ username }}</a>
+            <img src="/img/{{ username }}_icon.jpg" onerror="javascript:this.src='/img/default_icon.jpg';" width="25" height="25" alt="你还没有头像"/>
+			  <a href="{% url 'userinfo' username=username %}">{{ username }}账号</a>
               <!--input type="text" placeholder="账号" class="form-control"-->
-              <a class="btn btn-link" href="{% url 'logout' %}">退出登录</a>
             </div>
-            
-            
+            <!--div class="form-group">
+              <input type="password" placeholder="密码" class="form-control">
             </div>
-           
-			
+            <button type="submit" class="btn btn-success">登录</button-->
+			<a class="btn btn-link" href="{% url 'logout' %}">退出登录</a>
           </form>
         </div><!-- /.nav-collapse -->	
       </div><!-- /.container -->
@@ -87,7 +86,7 @@
             {% if news %}
             {% for f in news %}
             <a href="#" class="list-group-item">{{ f.title }}</a>
-	    <a href="{{ f.url }}" class="list-group-item">链接</a>
+	    <a class="btn btn-link" href="{% url 'news_paget' username=username url=f.url %}" role="button">看看具体的新闻</a>
             {% endfor %}
 	    {% else %}
            <h3>用户"{{ SearchChar }}"还没有转发任何新闻哦</h3>
@@ -95,13 +94,16 @@
           </div>
         </div><!--/span-->
 
-</div>
-</div>
-</div>
 
 
 
 
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./登陆后主界面_files/jquery.min(1).js"></script>
+    <script src="./登陆后主界面_files/bootstrap.min(1).js"></script>
+    <script src="./登陆后主界面_files/offcanvas.js"></script>
   
 
 </body></html>
