--- a/template/friends.html
+++ b/template/friends.html
@@ -197,11 +197,13 @@
 </div>
 <div class="tab-pane fade" id="friend_submit">
 {% for f in mylist %}
+{% if f.ReqDir == 1 %}
 <div class="friend-request">
 	<div width="200" height="20">
 			<h4>用户{{ f.username }}请求添加你为他/她的好友：<a href="{% url 'addfriendconfirm' username=username friendID=f.id %}" class="btn btn-info">同意</a></h4>
 	</div>
 </div>
+{% endif %}
 {% endfor %}
 
 					<div style="margin-left:250px">
