--- a/template/self_page.html
+++ b/template/self_page.html
@@ -58,7 +58,7 @@
 		  <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
             <img src="/img/{{ username }}_icon.jpg" onerror="javascript:this.src='/img/default_icon.jpg';" width="25" height="25" alt="你还没有头像"/>
-			  <a href="{% url 'userinfo' username=username %}">{{ username }}账号</a>
+			  <a href="{% url 'userinfo' username=username %}">{{ username }}</a>
               <!--input type="text" placeholder="账号" class="form-control"-->
             </div>
             <!--div class="form-group">
