--- a/template/sign_in&up.html
+++ b/template/sign_in&up.html
@@ -112,10 +112,10 @@
                 </li>
                 
                 <li>
-                 <label class="input-tips2">年龄：</label>
+                 <label class="input-tips2">生日：</label>
                     <div class="inputOuter2">
                        
-                        <input type="text" name="age" placeholder="年龄" maxlength="10" class="inputstyle2"/>
+                        <input type="date" name="age" placeholder="生日" maxlength="10" class="inputstyle2"/>
                     </div>
                    
                 </li>
