--- a/template/css/position.css
+++ b/template/css/position.css
@@ -6,7 +6,9 @@
 	margin-right:200px;*/
 }
 
-#personal-inf{
+.personal-inf{
+width:800px;
+height:200px;
 	margin-left:200px;
 }
 
@@ -42,7 +44,7 @@
 
 .henglakuang{
 	width:900px;
-	margin-top:50px;
+	margin-top:0px;
 	margin-right:200px;
 	margin-left:200px;
 }
